force-app/main/default/objects/Meta_App_Credentials__c/Meta_App_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Meta App Credentials</label>
</CustomObject>