force-app/main/default/objects/Meta_App_Credentials__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <label>Owner Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>