force-app/main/default/objects/Meta_App_Credentials__c/fields/Redirect_URI__c.field-meta.xml
<CustomField>
    <fullName>Redirect_URI__c</fullName>
    <label>Redirect_URI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>