force-app/main/default/objects/Meta_App_Credentials__c/fields/SObject_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Record_Type__c</fullName>
    <label>SObject Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>