force-app/main/default/objects/Meta_App_Credentials__c/fields/Webhook_Token__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Token__c</fullName>
    <label>Webhook Token</label>
    <type>TextArea</type>
</CustomField>